# kr

./: Author.cpp  Author.h  Book.cpp  Book.h  CMakeLists.txt  Shop.cpp  Shop.h
structures/: Deque.h  DequeOnArray.h  ForwardListOnArray.h  Forward_listOnNodes.h  ListOnArray.h  ListOnNodes.h  QueueOnNodes.h  StackOnArray.h  StackOnNodes.h  arrQueue.h
